--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,68 @@ body {
     font-family: 'Open Sans', sans-serif;
     margin: 0;
     padding: 0;
+    text-decoration: none;
+}
+
+div.wrapper {
+    width: 100%;
+    margin-bottom: 0;
+}
+
+h1, p, ul {
+    margin: 0;
+}
+
+/* Header Navbar section */
+div.nav-bar-right ul li {
+    list-style: none;
+    text-decoration: none;
+}
+
+div.nav-bar-right ul li a {
+    text-decoration: none;
+}
+
+.nav-bar div.alco {
+    display: none;
+}
+
+nav.nav-bar {
+    width: 100%;
+    height: 70%;
+    /* padding: 10px; */
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    position: relative;
+    background-color: #FFFFFF;
+}
+
+nav.nav-bar .nav-bar-right ul {
+    padding: 0;
+}
+
+nav.nav-bar .nav-bar-right ul li {
+    display: inline-block;
+    width: 90px;
+    text-align: center;
+}
+
+nav.nav-bar .nav-bar-right ul li a {
+    color: #000000;
+    text-transform: uppercase;
+    font-size: 14px;
+    font-weight: bold;
+    transition: all 0.5s ease;
+}
+
+nav.nav-bar .nav-bar-right ul li a:hover {
+    color: #182c8c;
+}
+/* End Header Navbar section */
+
+.txtContent {
+    color: #FFFFFF;
 }
 
 .txtCenter {
@@ -19,16 +81,122 @@ body {
     font-style: italic;
 }
 
+.link {
+    cursor: pointer;
+}
+
 #headerLogo {
     width: 200px;
 }
 
+/* Background Image */
+#alcoGroupBanner {
+    background: url('../img/101220_1x1M.jpg') no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+/* End Background Image */
+
+/* Company Group Section */
+.groupContainer {
+    background: linear-gradient(to right, #FFF, #182c8c);
+}
+
+.row {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    flex-flow: wrap;
+    width: 50%;
+    margin: 0 auto;
+}
+
+.card {
+    width: 40%;
+    background: #fff;
+    border: 1px solid #ccc;
+    margin-bottom: 50px;
+    transition: 0.3s;
+}
+
+.card-header img {
+    width: 100%;
+    height: 200px;
+}
+
+.card-header h1 {
+    text-align: center;
+    padding: 80px 25px;
+}
+
+.card-body {
+    border-top: 1px solid #ccc;
+    padding: 20px 20px;
+    text-align: center;
+    font-size: 10px;
+}
+
+.card:hover {
+    transform: scale(1.05);
+    box-shadow: 0 0 40px -10px rgba(0, 0, 0, 0.25);
+}
+/* End Company Group Section */
+
 /* Start Footer */
 footer {
-    padding: 20px;
+    padding: 10px;
     color: white;
     background-color: #182c8c;
     text-align: center;
     font-weight: bold;
 }
 /* End Footer */
+
+/** Responsive **/
+@media screen and (max-width: 768px) {
+    nav.nav-bar {
+        flex-direction: column;
+        height: auto;
+        align-items: center;;
+    }
+
+    .nav-bar div.alco { 
+        display: block;
+        position: absolute;
+        top: 20px;
+        right: 20px;
+    }
+
+    #headerLogo {
+        width: 150px;
+    }
+
+    .nav-bar div.nav-bar-right ul li {
+        display: block;
+        padding: 10px;
+    }
+
+    .nav-bar div.nav-bar-right {
+        display: none;
+    }
+}
+
+@media screen and (max-width: 1300px) {
+    .row {
+        width: 70%;
+    }
+}
+
+@media screen and (max-width: 1000px) {
+    .card {
+        width: 70%;
+    }
+}
+
+/** End Responsive **/
+
+.nav-bar div.nav-bar-right.active {
+    display: block;
+}
